// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Alert 1`] = `
<div
  className="alert"
>
  Hello World
</div>
`;

exports[`renders the right classes for success/warning/error 1`] = `
<div
  className="alert success"
>
  Hello World
</div>
`;

exports[`renders the right classes for success/warning/error 2`] = `
<div
  className="alert warning"
>
  Hello World
</div>
`;

exports[`renders the right classes for success/warning/error 3`] = `
<div
  className="alert error"
>
  Hello World
</div>
`;
